fixing margin issue on mobile view

--- a/pricing.scss
+++ b/pricing.scss
@@ -35,6 +35,10 @@ body {
             width: 60%;
             margin: 0 auto;
             margin-bottom: 100px;
+
+            @media screen and (max-width: 500px) {
+                width: 80%;
+            }
         
             .pricing__plan {
                 background-color: $white;
